<resources>
    <string name="app_name">Tegmine</string>

    <string name="action_settings">Settings</string>
    <string name="action_check_updates">Check for updates</string>
    <string name="menu_paste_text">Append from Clipboard</string>
    <string name="menu_share">Share...</string>
    <string name="menu_copy_clipboard">Copy to Clipboard</string>
    <string name="menu_view_options">View</string>
    <string name="p_config_file">p_config_file</string>
    <string name="p_tabs_size">p_tabs_size</string>
    <string name="menu_show_editors">Editors</string>
    <string name="menu_rename">Rename...</string>
    <string name="menu_remove">Remove...</string>
    <string name="menu_open_folder">New window</string>
    <string name="menu_new_file">New file...</string>
    <string name="menu_new_folder">New folder...</string>
    <string name="action_storages">Storages</string>
    <string name="p_config_file_default">tegmine+assets://tegmine.conf</string>
    <string name="p_config_revert">p_config_revert</string>
    <string name="p_config_reload">p_config_reload</string>
    <string name="p_config_assist_set">p_config_assist_set</string>
    <string name="p_config_assist_reset">p_config_assist_reset</string>
    <string name="p_config_assist">p_config_assist</string>
    <string name="conf_widget_title">conf_widget_title</string>
    <string name="conf_widget_label">conf_widget_label</string>
    <string name="conf_widget_name">conf_widget_name</string>
    <string name="conf_widget_data">conf_widget_data</string>
    <string name="conf_widget_line_wrap">conf_widget_line_wrap</string>
    <string name="conf_widget_url">conf_widget_url</string>
    <string name="p_config_share_set">p_config_share_set</string>
    <string name="conf_widget_ext">conf_widget_ext</string>
    <string-array name="shortcut_types">
        <item>Display file</item>
        <item>Append to</item>
        <item>Edit contents</item>
    </string-array>
</resources>
